--- a/src/style.css
+++ b/src/style.css
@@ -19,14 +19,14 @@ button {
 
   --bg-box-color: #fff;
 
-  --color-primary: #2080f0;
+  --color-primary: #4098fc;
   --hover-bg-color: #f0f0f0;
 
   --text-color-primary: #fff;
-  --bg-color-primary: #2080f0;
+  --bg-color-primary: #4098fc;
 
   --hover-text-color-primary: #fff;
-  --hover-bg-color-primary: #2080f0;
+  --hover-bg-color-primary: #79bbff;
 
   --bg-btn-color: #fff;
 }
@@ -52,7 +52,7 @@ html.dark {
 .element-ui {
   --el-color-white: #ffffff;
   --el-color-black: #000000;
-  --el-color-primary: ##4098fc;
+  --el-color-primary: #4098fc;
   --el-color-primary-light-3: #79bbff;
   --el-color-primary-light-5: #a0cfff;
   --el-color-primary-light-7: #c6e2ff;
