feat: 登录完成，对导航栏和用户菜单栏进一步完善，增加用户仓库

--- a/src/style.css
+++ b/src/style.css
@@ -28,6 +28,8 @@ button {
   --hover-text-color-primary: #fff;
   --hover-bg-color-primary: #79bbff;
 
+  --mask-hover-bg:#ffffff9a
+
   --bg-btn-color: #fff;
 
   --main-bg-color: #fafafc;
