feat: 修复用户登录时、加载用户数据时的bug，我的页面接口编写，我的一级路由完成，歌单页面完成

--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,7 @@
   padding: 0;
   list-style: none;
   outline: none;
+  -webkit-user-drag: none;
 }
 
 html {
@@ -14,6 +15,9 @@ button {
 
 /*亮色css变量*/
 :root {
+  --mask-text-color: #fff;
+  --mask-bg-color: #00000030;
+
   --text-color: black;
   --bg-color: #fff;
 
@@ -28,15 +32,19 @@ button {
   --hover-text-color-primary: #fff;
   --hover-bg-color-primary: #79bbff;
 
-  --mask-hover-bg:#ffffff9a
+  --mask-hover-bg: #ffffff9a;
 
   --bg-btn-color: #fff;
 
   --main-bg-color: #fafafc;
+
+  --box-border-color: #c8cbd0;
 }
 
 /*深色变量*/
 html.dark {
+  --box-border-color: #626469;
+
   --text-color: #fff;
 
   --hover-bg-color: #59595e;
