feat: 收藏的歌手页面完成，对收藏hooks进行了修改，完美修复通过url传递参数无法获取数据总数量的bug

--- a/src/style.css
+++ b/src/style.css
@@ -15,6 +15,9 @@ button {
 
 /*亮色css变量*/
 :root {
+
+  --box-shadow:rgba(0, 0, 0, 0.318);
+
   --mask-text-color: #fff;
   --mask-bg-color: #00000030;
 
