feat: 首页接口编写，轮播图组件完成

--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,7 @@
 }
 
 html {
+  user-select: none;
   background-color: var(--bg-color);
 }
 button {
@@ -15,8 +16,7 @@ button {
 
 /*亮色css变量*/
 :root {
-
-  --box-shadow:rgba(0, 0, 0, 0.318);
+  --box-shadow: rgba(0, 0, 0, 0.318);
 
   --mask-text-color: #fff;
   --mask-bg-color: #00000030;
