feat: 对mv、歌手卡片组件优化，轮播图优化，完成推荐的歌单和推荐的mv

--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,7 @@
   list-style: none;
   outline: none;
   -webkit-user-drag: none;
+  text-decoration: none;
 }
 
 html {
@@ -73,6 +74,21 @@ html.dark {
 
   --main-bg-color: #18181c;
 }
+
+/*首页推荐列表*/
+.recommend-playlist ul {
+  padding: 0;
+}
+
+/*文本*/
+.text {
+  transition: 0.3s;
+  font-size: 13px;
+}
+.text:hover {
+  color: var(--bg-color-primary);
+}
+
 
 /*element ui的css变量*/
 .element-ui {
