feat: 推荐的歌手完成

--- a/src/style.css
+++ b/src/style.css
@@ -89,6 +89,10 @@ html.dark {
   color: var(--bg-color-primary);
 }
 
+.loading-box{
+  max-height: 0;
+  overflow: hidden;
+}
 
 /*element ui的css变量*/
 .element-ui {
