feat: 每日推荐完成，首页竣工

--- a/src/style.css
+++ b/src/style.css
@@ -84,6 +84,7 @@ html.dark {
 .text {
   transition: 0.3s;
   font-size: 13px;
+  cursor: pointer;
 }
 .text:hover {
   color: var(--bg-color-primary);
