feat: 歌曲项组件封装完成，每日推荐页面完成

--- a/src/style.css
+++ b/src/style.css
@@ -45,7 +45,7 @@ button {
 
   --main-bg-color: #fafafc;
 
-  --box-border-color: #c8cbd0;
+  --box-border-color: #efeff5;
 
   --text-dark: #a0a4a9;
   --text-hover: #4098fc;
