--- a/src/style.css
+++ b/src/style.css
@@ -20,6 +20,8 @@ button {
 :root {
   --box-shadow: rgba(0, 0, 0, 0.318);
 
+  --color-primary-light: rgb(196, 223, 253);
+
   --mask-text-color: #fff;
   --mask-bg-color: #00000030;
 
@@ -55,6 +57,7 @@ button {
 
 /*深色变量*/
 html.dark {
+   --color-primary-light: rgb(36, 53, 71);
   --scroll-bar-color: #404043;
   --scroll-bar-color--hover: #58585b;
 
