--- a/src/style.css
+++ b/src/style.css
@@ -49,7 +49,7 @@ button {
   --main-bg-color: #fafafc;
 
   --box-border-color: #efeff5;
-
+  --tag-bg-color:#eeeeee;
   --text-dark: #a0a4a9;
   --text-hover: #4098fc;
   --drawer-bg-color: #fff;
@@ -57,6 +57,7 @@ button {
 
 /*深色变量*/
 html.dark {
+    --tag-bg-color:#333333;
    --color-primary-light: rgb(36, 53, 71);
   --scroll-bar-color: #404043;
   --scroll-bar-color--hover: #58585b;
