feat: 预览图片组件的封装和渲染函数，歌单封面、名称的修改

--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,9 @@
   -webkit-font-smoothing: antialiased;
 }
 
+body{
+  overflow: hidden !important;
+}
 html {
   user-select: none;
   background-color: var(--bg-color);
