--- a/src/render/PlaylistPanel/playlistPanel.css
+++ b/src/render/PlaylistPanel/playlistPanel.css
@@ -1,14 +1,15 @@
-.kg-msg-box-container {
+.model-container {
   position: absolute;
-  top: 0;
+  z-index: 1000;
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.4);
+  top: 0;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  z-index: 1000;
+  background-color: rgba(0, 0, 0, 0.381);
   overflow: hidden;
   backdrop-filter: blur(5px);
 }
